--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script defer src="https://api-maps.yandex.ru/2.1/?apikey=25c2d8bd-3203-45e0-8e40-d271072a5dd1&lang=ru_RU" type="text/javascript"></script>
     <title>React App</title>
   </head>
   <body>
