--- a/public/index.html
+++ b/public/index.html
@@ -7,14 +7,8 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="So interested website about restaurants"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -25,7 +19,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <script defer src="https://api-maps.yandex.ru/2.1/?apikey=25c2d8bd-3203-45e0-8e40-d271072a5dd1&lang=ru_RU" type="text/javascript"></script>
-    <title>React App</title>
+    <title>Restaraunts App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
